Updating pipeline: pipeline1 Updating dataset: SqlServerTable1 Updating dataset: SnowflakeTable1 Adding pipeline: pipeline2

--- a/dataset/SnowflakeTable1.json
+++ b/dataset/SnowflakeTable1.json
@@ -5,12 +5,20 @@
 			"referenceName": "Snowflake1",
 			"type": "LinkedServiceReference"
 		},
+		"parameters": {
+			"something": {
+				"type": "String"
+			}
+		},
 		"annotations": [],
 		"type": "SnowflakeV2Table",
 		"schema": [],
 		"typeProperties": {
 			"schema": "RAW_SCHEMA",
-			"table": "CUSTOMERS"
+			"table": {
+				"value": "@dataset().something",
+				"type": "Expression"
+			}
 		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
